fix: algumas alteraçoes vizuais

--- a/lol-frontend.html
+++ b/lol-frontend.html
@@ -29,7 +29,7 @@
                 <div class="card">
                     <h3>O que é League of Legends?</h3>
                     <p>League of Legends (LoL) é um jogo MOBA (Multiplayer Online Battle Arena) onde duas equipes de 5 jogadores competem para destruir o Nexus inimigo.</p>
-                    <img src="/api/placeholder/300/200" alt="Mapa do LoL">
+                    <img src="mapaLol.png" alt="Mapa do LoL">
                 </div>
                 <div class="card">
                     <h3>Objetivo Principal</h3>
@@ -39,6 +39,7 @@
                         <li>Trabalhar em equipe</li>
                         <li>Destruir o Nexus inimigo</li>
                     </ul>
+                    <img src="objetivos.png" alt="imagem de objetivo">
                 </div>
             </div>
         </section>
