--- a/lol-frontend.html
+++ b/lol-frontend.html
@@ -257,7 +257,7 @@
                 <span class="rune-use">Use em: Supports encantadores como Karma e Lulu</span>
               </div>
               <div class="rune-item">
-                <strong>Phase Rush</strong>
+                <strong>Ímpeto Gradual</strong>
                 <p>Depois de causar dano com 3 habilidades separadas ou ataques, ganha Velocidade de movimento massiva e resistência a slows.
                   Cooldown de 30-10s.</p>
                 <span class="rune-use">Use em: Campeões que se baneficiam de mobilidade como Gragas</span>
@@ -273,15 +273,15 @@
                   <h5>Primeira Fileira</h5>
                   <div class="rune-minor-item">
                     <strong>Arcanista do Axioma</strong>
-                    <p>Nova runa para magos: aumenta dano/cura/escudo da ultimate e reduz seu CD com takedowns</p>
+                    <p>Aumenta dano/cura/escudo da ultimate e reduz seu CD atual com takedowns</p>
                   </div>
                   <div class="rune-minor-item">
                     <strong>Faixa de Fluxo de Mana</strong>
-                    <p>Acertar um campeão ganha mana máxima permanente</p>
+                    <p>Acertar um campeão com uma habilidade ganha mana máxima permanente</p>
                   </div>
                   <div class="rune-minor-item">
-                    <strong>Manto de Nuvens</strong>
-                    <p>Usar summoners gera velocidade de movimento</p>
+                    <strong>Manto de Nimbus</strong>
+                    <p>Usar summoners gera velocidade de movimento e efeito fantasma</p>
                   </div>
                 </div>
               </div>
@@ -290,15 +290,15 @@
                   <h5>Segunda Fileira</h5>
                   <div class="rune-minor-item">
                     <strong>Transcendência</strong>
-                    <p>Ganha habilidade apressada nos níveis 5 e 8. CDR em excesso vira força adaptativa</p>
+                    <p>Ganha aceleração de habilidade nos níveis 5 e 8, mas no nível 11 ao abater campeões reduz em 20% o CD das habilidades básicas</p>
                   </div>
                   <div class="rune-minor-item">
                     <strong>Celeridade</strong>
-                    <p>Ganha velocidade de movimento baseado em bônus de MS</p>
+                    <p>Ganha velocidade de movimento baseado em bônus de velocidade de movimento</p>
                   </div>
                   <div class="rune-minor-item">
                     <strong>Foco Absoluto</strong>
-                    <p>Ganha AD/AP quando acima de 70% da vida</p>
+                    <p>Ganha Dano Adaptativo quando acima de 70% da vida</p>
                   </div>
                 </div>
               </div>
@@ -307,15 +307,15 @@
                   <h5>Terceira Fileira</h5>
                   <div class="rune-minor-item">
                     <strong>Chamuscar</strong>
-                    <p>Primeira habilidade a cada 10 segundos queima campeões</p>
+                    <p>Primeira habilidade de dano que atingir o alvo, queima o alvo</p>
                   </div>
                   <div class="rune-minor-item">
                     <strong>Caminhar Sobre Águas</strong>
-                    <p>Ganha MS e AD/AP no rio</p>
+                    <p>Ganha velocidade de movimento e Dano Adaptativo no rio</p>
                   </div>
                   <div class="rune-minor-item">
                     <strong>Tempestade Crescente</strong>
-                    <p>Ganha quantidades crescentes de AD ou AP ao longo do jogo</p>
+                    <p>Ganha quantidades crescentes de Dano Adaptativo ao longo do jogo</p>
                   </div>
                 </div>
               </div>
@@ -329,20 +329,18 @@
             <h4>Runas Chave (Escolha 1)</h4>
             <div class="rune-grid">
               <div class="rune-item">
-                <strong>Grasp of the Undying</strong>
-                <p>A cada 3s em combate você gera uma stack. Com 4 stacks, próximo ataque básico consome todas para
-                  causar dano bônus.</p>
+                <strong>Aperto dos Mortos-vivos</strong>
+                <p>A cada 4s, seu próximo ataque contra um Campeão causa dano Mágico adicioal, cura você e aumenta permanentemente sua vida.</p>
                 <span class="rune-use">Use em: Tanks e bruisers como Sion e Ornn</span>
               </div>
               <div class="rune-item">
-                <strong>Aftershock</strong>
-                <p>Similar ao Coragem do Colosso, ideal para campeões de engage com muito CC que querem resistência para
-                  sair vivos.</p>
+                <strong>Pós-Choque</strong>
+                <p>Após imobilizar um Campeão inimigo, ganha defesas e depois causa um ataque de Dano Mágico explosivo. Cooldown de 20s.</p>
                 <span class="rune-use">Use em: Supports tanques como Leona e Thresh</span>
               </div>
               <div class="rune-item">
-                <strong>Guardian</strong>
-                <p>Você e aliados próximos ganham escudo quando um de vocês toma dano de campeão. CD: 70-40s.</p>
+                <strong>Guardião</strong>
+                <p>Você e aliados próximos ganham escudo quando um de vocês sofre dano de campeão. Cooldown de 90-40s.</p>
                 <span class="rune-use">Use em: Supports defensivos</span>
               </div>
             </div>
@@ -364,7 +362,7 @@
                   </div>
                   <div class="rune-minor-item">
                     <strong>Golpe de Escudo</strong>
-                    <p>Ganha armadura e resistência mágica enquanto protegido por escudo</p>
+                    <p>Sempre que receber um escudo, seu próximo ataque básico contra um Campeão causará Dano Adaptativo</p>
                   </div>
                 </div>
               </div>
@@ -373,15 +371,15 @@
                   <h5>Segunda Fileira</h5>
                   <div class="rune-minor-item">
                     <strong>Condicionamento</strong>
-                    <p>Após 12 minutos, ganha +8 de armadura e RM, e 3% a mais de resistências</p>
+                    <p>Após 12 minutos, ganha +8 de armadura e resistência mágica, e 3% a mais de resistências</p>
                   </div>
                   <div class="rune-minor-item">
-                    <strong>Ventos Alísios</strong>
+                    <strong>Ventos Revigorantes</strong>
                     <p>Após tomar dano, ganha regeneração de vida por 10 segundos</p>
                   </div>
                   <div class="rune-minor-item">
-                    <strong>Armadura Óssea</strong>
-                    <p>Após tomar dano, próximos 3 ataques causam menos dano</p>
+                    <strong>Osso Revestido</strong>
+                    <p>Após tomar dano, próximos 3 ataques ou habilidades causam menos dano</p>
                   </div>
                 </div>
               </div>
@@ -390,15 +388,15 @@
                   <h5>Terceira Fileira</h5>
                   <div class="rune-minor-item">
                     <strong>Crescimento Excessivo</strong>
-                    <p>Permanentemente ganha vida por unidades mortas próximas</p>
+                    <p>Permanentemente ganha vida por unidades ou monstros abatidos perto de você</p>
                   </div>
                   <div class="rune-minor-item">
                     <strong>Revitalizar</strong>
-                    <p>Curas e escudos são 5% mais fortes, +10% em alvos com pouca vida</p>
+                    <p>Curas e escudos são 5% mais fortes, +10% cura e escudo em alvos com pouca vida</p>
                   </div>
                   <div class="rune-minor-item">
                     <strong>Inabalável</strong>
-                    <p>Ganha armadura e RM bônus quando sofre slow ou imobilização</p>
+                    <p>Ganha armadura e resistência mágica bônus quando sofre slow ou imobilização</p>
                   </div>
                 </div>
               </div>
@@ -412,19 +410,18 @@
             <h4>Runas Chave (Escolha 1)</h4>
             <div class="rune-grid">
               <div class="rune-item">
-                <strong>Intensificador Glacial</strong>
-                <p>Imobilizar campeão inimigo causa 3 raios glaciais que criam zonas que diminuem a velocidade dos
-                  inimigos.</p>
+                <strong>Aprimoramento Glacial</strong>
+                <p>Imobilizar campeão inimigo causa 3 raios glaciais que criam zonas que diminuem a velocidade dos inimigos e o dano causado a aliados.</p>
                 <span class="rune-use">Use em: Supports de controle</span>
               </div>
               <div class="rune-item">
-                <strong>Livro de Feitiços Emancipado</strong>
-                <p>Fora de combate, pode trocar um summoner por outro de uso único. Volta ao original após uso.</p>
+                <strong>Livro de Feitiços Deslacrado</strong>
+                <p>Fora de combate, pode trocar um Feitiço de Invocador por outro.</p>
                 <span class="rune-use">Use em: Builds experimentais e flexíveis</span>
               </div>
               <div class="rune-item">
                 <strong>Primeiro Ataque</strong>
-                <p>Causar dano primeiro faz todo seu dano subsequente causar dano bônus e garante gold depois.</p>
+                <p>Ao iniciar um combate contra um Campeão, você causa 7% de dano adicional por 3s e recebe ouro com base no dano causado.</p>
                 <span class="rune-use">Use em: Campeões de poke que podem iniciar trades</span>
               </div>
             </div>
@@ -437,16 +434,16 @@
                 <div class="rune-minor-group">
                   <h5>Primeira Fileira</h5>
                   <div class="rune-minor-item">
-                    <strong>Calçado Mágico</strong>
-                    <p>Recebe boots grátis aos 12 minutos, chegam 45s mais cedo por takedown</p>
+                    <strong>Flashtração Hextec</strong>
+                    <p>Enquanto o Flash estiver em Tempo de Recarga, ele é substituido pelo Flash Hextec</p>
                   </div>
                   <div class="rune-minor-item">
-                    <strong>Tripla Tônica</strong>
-                    <p>Ganha elixires especiais grátis nos níveis 3, 6 e 9</p>
+                    <strong>Calçados Mágicos</strong>
+                    <p>Recebe botas grátis aos 12 minutos, chegam 45s mais cedo por takedown</p>
                   </div>
                   <div class="rune-minor-item">
-                    <strong>Mercado do Futuro</strong>
-                    <p>Pode comprar itens no débito com juros mínimos</p>
+                    <strong>Reembolso</strong>
+                    <p>Recebe ouro de volta a comprar itens Lendários</p>
                   </div>
                 </div>
               </div>
@@ -454,16 +451,16 @@
                 <div class="rune-minor-group">
                   <h5>Segunda Fileira</h5>
                   <div class="rune-minor-item">
-                    <strong>Perspicácia Cósmica</strong>
-                    <p>Ganha 15 de pressa para summoners e 10 para itens ativos</p>
+                    <strong>Tônico Triplo</strong>
+                    <p>Ganha elixires especiais grátis nos níveis 3, 6 e 9</p>
                   </div>
                   <div class="rune-minor-item">
-                    <strong>Velocidade de Aproximação</strong>
-                    <p>Ganha MS ao se aproximar de inimigos com movimento prejudicado</p>
+                    <strong>Tônico de Distorção no Tempo</strong>
+                    <p>Consumir poções cura mais rapidamente</p>
                   </div>
                   <div class="rune-minor-item">
                     <strong>Entrega de Biscoitos</strong>
-                    <p>Biscoitos grátis a cada 2 minutos que concedem mana permanente</p>
+                    <p>Biscoitos grátis a cada 2 minutos que concedem cura e vida permanente</p>
                   </div>
                 </div>
               </div>
@@ -471,12 +468,16 @@
                 <div class="rune-minor-group">
                   <h5>Terceira Fileira</h5>
                   <div class="rune-minor-item">
-                    <strong>Tônico do Tempo Distorcido</strong>
-                    <p>Consumir poções ganha MS e cura mais rapidamente</p>
+                    <strong>Perspicácia Cósmica</strong>
+                    <p>Ganha 18 de aceleração para Feitiço do Invocador e 10 para itens ativos</p>
                   </div>
                   <div class="rune-minor-item">
-                    <strong>Pulverizador de Tropas</strong>
-                    <p>Destrói um minion instantaneamente para receber gold extra</p>
+                    <strong>Velocidade de Aproximação</strong>
+                    <p>Ganha MS ao se aproximar de inimigos com movimento prejudicado</p>
+                  </div>
+                  <div class="rune-minor-item">
+                    <strong>Quebra-Galho</strong>
+                    <p>A cada  5 atributos diferente recebido de itens, recebe Força Adaptativa adicional</p>
                   </div>
                 </div>
               </div>
