add: icones das runas

--- a/lol-frontend.html
+++ b/lol-frontend.html
@@ -32,7 +32,7 @@
           <h3>O que é League of Legends?</h3>
           <p>League of Legends (LoL) é um jogo MOBA (Multiplayer Online Battle Arena) onde duas equipes de 5 jogadores
             competem para destruir o Nexus inimigo.</p>
-          <img src="mapaLol.png" alt="Mapa do LoL">
+          <img src="assets/mapaLol.png" alt="Mapa do LoL">
         </div>
         <div class="card">
           <h3>Objetivo Principal</h3>
@@ -41,7 +41,7 @@
             <li>Matar minions para ouro e experiência</li>
             <li>Trabalhar em equipe</li>
             <li>Destruir o Nexus inimigo</li>
-            <img src="objetivos.png" alt="Mapa do LoL">
+            <img src="assets/objetivos.png" alt="Mapa do LoL">
           </ul>
         </div>
       </div>
@@ -67,18 +67,18 @@
 
       <div class="runes-container">
         <div class="rune-tree precisao">
-          <h3>🎯 Precisão (Precision)</h3>
+          <h3><img src="assets/precision.png" alt="Precisão" class="rune-icon"> Precisão (Precision)</h3>
           <div class="rune-category">
             <h4>Runas Chave (Escolha 1)</h4>
             <div class="rune-grid">
               <div class="rune-item">
-                <strong>Precione o Ataque</strong>
+                <strong>Pressione o Ataque</strong>
                 <p>Atingir um campeão inimigo com 3 ataques básicos consecutivos causa dano adaptativo bônus e amplifica
                   o dano que você causa até sair de combate.</p>
                 <span class="rune-use">Use em: ADCs e lutadores que focam em duelos 1v1</span>
               </div>
               <div class="rune-item">
-                <strong>Ritimo Fatal</strong>
+                <strong>Ritmo Fatal</strong>
                 <p>Atacar um campeão inimigo ganha uma stack de Tempo Letal por 6 segundos, até 6 stacks. Cada stack
                   garante 5% de AS. Com stacks máximas, ataques também disparam uma nota que causa dano.</p>
                 <span class="rune-use">Use em: Campeões baseados em velocidade de ataque</span>
@@ -157,7 +157,7 @@
         </div>
 
         <div class="rune-tree dominacao">
-          <h3>⚔️ Dominação (Domination)</h3>
+          <h3><img src="assets/domination.png" alt="Dominação" class="rune-icon"> Dominação (Domination)</h3>
           <div class="rune-category">
             <h4>Runas Chave (Escolha 1)</h4>
             <div class="rune-grid">
@@ -169,8 +169,7 @@
               </div>
               <div class="rune-item">
                 <strong>Colheita Sombria</strong>
-                <p>Causar dano a campeões abaixo de 50% da vida causa dano adaptativo adicional e colhe a alma de sua vítima. Cooldown de 35s,
-                  resetando para 1s em takedowns.</p>
+                <p>Causar dano a campeões abaixo de 50% da vida causa dano adaptativo adicional e colhe a alma de sua vítima. Cooldown de 35s, resetando para 1s em takedowns.</p>
                 <span class="rune-use">Use em: Campeões de late game e poke</span>
               </div>
               <div class="rune-item">
@@ -241,7 +240,7 @@
         </div>
 
         <div class="rune-tree feiticaria">
-          <h3>✨ Feitiçaria (Sorcery)</h3>
+          <h3><img src="assets/sorcery.png" alt="Feitiçaria" class="rune-icon"> Feitiçaria (Sorcery)</h3>
           <div class="rune-category">
             <h4>Runas Chave (Escolha 1)</h4>
             <div class="rune-grid">
@@ -324,7 +323,7 @@
         </div>
 
         <div class="rune-tree determinacao">
-          <h3>🛡️ Determinação (Resolve)</h3>
+          <h3><img src="assets/resolve.png" alt="Determinação" class="rune-icon"> Determinação (Resolve)</h3>
           <div class="rune-category">
             <h4>Runas Chave (Escolha 1)</h4>
             <div class="rune-grid">
@@ -405,7 +404,7 @@
         </div>
 
         <div class="rune-tree inspiracao">
-          <h3>💡 Inspiração (Inspiration)</h3>
+          <h3><img src="assets/inspiration.png" alt="Inspiração" class="rune-icon"> Inspiração (Inspiration)</h3>
           <div class="rune-category">
             <h4>Runas Chave (Escolha 1)</h4>
             <div class="rune-grid">
