refactor: css otimizado

--- a/lol-frontend.html
+++ b/lol-frontend.html
@@ -176,9 +176,7 @@
               <div class="rune-grid">
                 <div class="rune-item">
                   <strong>Eletrocutar</strong>
-                  <p>Causar dano a um inimigo com 3 ataques ou habilidades diferentes em 3s causa dano adaptativo
-                    adicional. Cooldown de 20s</p>
-                  </p>
+                  <p>Causar dano a um inimigo com 3 ataques ou habilidades diferentes em 3s causa dano adaptativo adicional. Cooldown de 20s</p>
                   <span class="rune-use">Use em: Assassinos e magos de burst</span>
                 </div>
                 <div class="rune-item">
