fix: cores dos spells

--- a/lol-frontend.html
+++ b/lol-frontend.html
@@ -581,7 +581,7 @@
           <span class="cooldown">Cooldown: 240s</span>
         </div>
 
-        <div class="spell-card" data-spell="teleport" data-color="#4488ff">
+        <div class="spell-card" data-spell="teleport" data-color="#A101FDFF">
           <h3>Teleport</h3>
           <div class="spell-icon-container">
             <img src="assets/spells/teleport.png" alt="Teleport" class="spell-icon">
@@ -590,7 +590,7 @@
           <span class="cooldown">Cooldown: 300s</span>
         </div>
 
-        <div class="spell-card" data-spell="barrier" data-color="#8844ff">
+        <div class="spell-card" data-spell="barrier" data-color="#FFD900FF">
           <h3>Barrier</h3>
           <div class="spell-icon-container">
             <img src="assets/spells/barrier.png" alt="Barrier" class="spell-icon">
@@ -599,7 +599,7 @@
           <span class="cooldown">Cooldown: 180s</span>
         </div>
 
-        <div class="spell-card" data-spell="exhaust" data-color="#aa44aa">
+        <div class="spell-card" data-spell="exhaust" data-color="#9C6D0FFF">
           <h3>Exhaust</h3>
           <div class="spell-icon-container">
             <img src="assets/spells/exhaust.png" alt="Exhaust" class="spell-icon">
@@ -617,7 +617,7 @@
           <span class="cooldown">Cooldown: 240s</span>
         </div>
 
-        <div class="spell-card" data-spell="ghost" data-color="#dddddd">
+        <div class="spell-card" data-spell="ghost" data-color="#0A3DC9FF">
           <h3>Ghost</h3>
           <div class="spell-icon-container">
             <img src="assets/spells/ghost.png" alt="Ghost" class="spell-icon">
