fix: nome das imagens

--- a/lol-frontend.html
+++ b/lol-frontend.html
@@ -700,15 +700,15 @@
                 <p>Tanks ofensivos que lideram o ataque, com alta mobilidade e iniciação forte.</p>
                 <div class="champions-list">
                   <div class="champion-item">
-                    <img src="assets/champions/malphite.png" alt="Malphite" class="champion-img">
+                    <img src="assets/champions/MalphiteSquare.png" alt="Malphite" class="champion-img">
                     <span>Malphite</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/ornn.png" alt="Ornn" class="champion-img">
+                    <img src="assets/champions/OrnnSquare.png" alt="Ornn" class="champion-img">
                     <span>Ornn</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/leona.png" alt="Leona" class="champion-img">
+                    <img src="assets/champions/LeonaSquare.png" alt="Leona" class="champion-img">
                     <span>Leona</span>
                   </div>
                 </div>
@@ -719,15 +719,15 @@
                 <p>Tanks defensivos especializados em proteção e peel para aliados.</p>
                 <div class="champions-list">
                   <div class="champion-item">
-                    <img src="assets/champions/braum.png" alt="Braum" class="champion-img">
+                    <img src="assets/champions/BraumSquare.png" alt="Braum" class="champion-img">
                     <span>Braum</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/tahm.png" alt="Tahm Kench" class="champion-img">
+                    <img src="assets/champions/TahmKenchSquare.png" alt="Tahm Kench" class="champion-img">
                     <span>Tahm Kench</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/shen.png" alt="Shen" class="champion-img">
+                    <img src="assets/champions/ShenSquare.png" alt="Shen" class="champion-img">
                     <span>Shen</span>
                   </div>
                 </div>
@@ -799,15 +799,15 @@
                 <p>Fighters de alta durabilidade que dominam em combates prolongados, mas com baixa mobilidade.</p>
                 <div class="champions-list">
                   <div class="champion-item">
-                    <img src="assets/champions/darius.png" alt="Darius" class="champion-img">
+                    <img src="assets/champions/DariusSquare.png" alt="Darius" class="champion-img">
                     <span>Darius</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/garen.png" alt="Garen" class="champion-img">
+                    <img src="assets/champions/GarenSquare.png" alt="Garen" class="champion-img">
                     <span>Garen</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/mordekaiser.png" alt="Mordekaiser" class="champion-img">
+                    <img src="assets/champions/MordekaiserSquare.png" alt="Mordekaiser" class="champion-img">
                     <span>Mordekaiser</span>
                   </div>
                 </div>
@@ -818,15 +818,15 @@
                 <p>Fighters com alta mobilidade que se especializam em mergulhar na backline inimiga.</p>
                 <div class="champions-list">
                   <div class="champion-item">
-                    <img src="assets/champions/camille.png" alt="Camille" class="champion-img">
+                    <img src="assets/champions/CamilleSquare.png" alt="Camille" class="champion-img">
                     <span>Camille</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/irelia.png" alt="Irelia" class="champion-img">
+                    <img src="assets/champions/IreliaSquare.png" alt="Irelia" class="champion-img">
                     <span>Irelia</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/jarvan.png" alt="Jarvan IV" class="champion-img">
+                    <img src="assets/champions/JarvanIVSquare.png" alt="Jarvan IV" class="champion-img">
                     <span>Jarvan IV</span>
                   </div>
                 </div>
@@ -898,15 +898,15 @@
                 <p>Especialistas em infiltração e eliminação rápida de alvos prioritários.</p>
                 <div class="champions-list">
                   <div class="champion-item">
-                    <img src="assets/champions/zed.png" alt="Zed" class="champion-img">
+                    <img src="assets/champions/ZedSquare.png" alt="Zed" class="champion-img">
                     <span>Zed</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/katarina.png" alt="Katarina" class="champion-img">
+                    <img src="assets/champions/KatarinaSquare.png" alt="Katarina" class="champion-img">
                     <span>Katarina</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/talon.png" alt="Talon" class="champion-img">
+                    <img src="assets/champions/TalonSquare.png" alt="Talon" class="champion-img">
                     <span>Talon</span>
                   </div>
                 </div>
@@ -917,15 +917,15 @@
                 <p>Assassinos que se destacam em combates 1v1 e pequenas escaramuças.</p>
                 <div class="champions-list">
                   <div class="champion-item">
-                    <img src="assets/champions/yasuo.png" alt="Yasuo" class="champion-img">
+                    <img src="assets/champions/YasuoSquare.png" alt="Yasuo" class="champion-img">
                     <span>Yasuo</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/fiora.png" alt="Fiora" class="champion-img">
+                    <img src="assets/champions/FioraSquare.png" alt="Fiora" class="champion-img">
                     <span>Fiora</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/riven.png" alt="Riven" class="champion-img">
+                    <img src="assets/champions/RivenSquare.png" alt="Riven" class="champion-img">
                     <span>Riven</span>
                   </div>
                 </div>
@@ -997,15 +997,15 @@
                 <p>Marksmen tradicionais focados em critical strike e ataques básicos.</p>
                 <div class="champions-list">
                   <div class="champion-item">
-                    <img src="assets/champions/jinx.png" alt="Jinx" class="champion-img">
+                    <img src="assets/champions/JinxSquare.png" alt="Jinx" class="champion-img">
                     <span>Jinx</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/caitlyn.png" alt="Caitlyn" class="champion-img">
+                    <img src="assets/champions/CaitlynSquare.png" alt="Caitlyn" class="champion-img">
                     <span>Caitlyn</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/ashe.png" alt="Ashe" class="champion-img">
+                    <img src="assets/champions/AsheSquare.png" alt="Ashe" class="champion-img">
                     <span>Ashe</span>
                   </div>
                 </div>
@@ -1016,15 +1016,15 @@
                 <p>Marksmen que escalam com velocidade de ataque e efeitos on-hit.</p>
                 <div class="champions-list">
                   <div class="champion-item">
-                    <img src="assets/champions/kai.png" alt="Kai'Sa" class="champion-img">
+                    <img src="assets/champions/KaiSaSquare.png" alt="Kai'Sa" class="champion-img">
                     <span>Kai'Sa</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/varus.png" alt="Varus" class="champion-img">
+                    <img src="assets/champions/VarusSquare.png" alt="Varus" class="champion-img">
                     <span>Varus</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/kogmaw.png" alt="Kog'Maw" class="champion-img">
+                    <img src="assets/champions/KogMawSquare.png" alt="Kog'Maw" class="champion-img">
                     <span>Kog'Maw</span>
                   </div>
                 </div>
@@ -1096,15 +1096,15 @@
                 <p>Magos especializados em eliminar alvos rapidamente com combos de habilidades.</p>
                 <div class="champions-list">
                   <div class="champion-item">
-                    <img src="assets/champions/syndra.png" alt="Syndra" class="champion-img">
+                    <img src="assets/champions/SyndraSquare.png" alt="Syndra" class="champion-img">
                     <span>Syndra</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/annie.png" alt="Annie" class="champion-img">
+                    <img src="assets/champions/AnnieSquare.png" alt="Annie" class="champion-img">
                     <span>Annie</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/veigar.png" alt="Veigar" class="champion-img">
+                    <img src="assets/champions/VeigarSquare.png" alt="Veigar" class="champion-img">
                     <span>Veigar</span>
                   </div>
                 </div>
@@ -1115,15 +1115,15 @@
                 <p>Magos que entram no meio das lutas, causando dano sustentado em área.</p>
                 <div class="champions-list">
                   <div class="champion-item">
-                    <img src="assets/champions/azir.png" alt="Azir" class="champion-img">
+                    <img src="assets/champions/AzirSquare.png" alt="Azir" class="champion-img">
                     <span>Azir</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/cassiopeia.png" alt="Cassiopeia" class="champion-img">
+                    <img src="assets/champions/CassiopeiaSquare.png" alt="Cassiopeia" class="champion-img">
                     <span>Cassiopeia</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/ryze.png" alt="Ryze" class="champion-img">
+                    <img src="assets/champions/RyzeSquare.png" alt="Ryze" class="champion-img">
                     <span>Ryze</span>
                   </div>
                 </div>
@@ -1134,15 +1134,15 @@
                 <p>Magos de longo alcance que causam dano de posições seguras.</p>
                 <div class="champions-list">
                   <div class="champion-item">
-                    <img src="assets/champions/xerath.png" alt="Xerath" class="champion-img">
+                    <img src="assets/champions/XerathSquare.png" alt="Xerath" class="champion-img">
                     <span>Xerath</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/vel.png" alt="Vel'Koz" class="champion-img">
+                    <img src="assets/champions/VelKozSquare.png" alt="Vel'Koz" class="champion-img">
                     <span>Vel'Koz</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/ziggs.png" alt="Ziggs" class="champion-img">
+                    <img src="assets/champions/ZiggsSquare.png" alt="Ziggs" class="champion-img">
                     <span>Ziggs</span>
                   </div>
                 </div>
@@ -1214,15 +1214,15 @@
                 <p>Supports especializados em curar, dar escudos e buffar aliados.</p>
                 <div class="champions-list">
                   <div class="champion-item">
-                    <img src="assets/champions/lulu.png" alt="Lulu" class="champion-img">
+                    <img src="assets/champions/LuluSquare.png" alt="Lulu" class="champion-img">
                     <span>Lulu</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/janna.png" alt="Janna" class="champion-img">
+                    <img src="assets/champions/JannaSquare.png" alt="Janna" class="champion-img">
                     <span>Janna</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/soraka.png" alt="Soraka" class="champion-img">
+                    <img src="assets/champions/SorakaSquare.png" alt="Soraka" class="champion-img">
                     <span>Soraka</span>
                   </div>
                 </div>
@@ -1233,15 +1233,15 @@
                 <p>Supports focados em engajar e fazer picks isolados no inimigo.</p>
                 <div class="champions-list">
                   <div class="champion-item">
-                    <img src="assets/champions/thresh.png" alt="Thresh" class="champion-img">
+                    <img src="assets/champions/ThreshSquare.png" alt="Thresh" class="champion-img">
                     <span>Thresh</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/blitzcrank.png" alt="Blitzcrank" class="champion-img">
+                    <img src="assets/champions/BlitzcrankSquare.png" alt="Blitzcrank" class="champion-img">
                     <span>Blitzcrank</span>
                   </div>
                   <div class="champion-item">
-                    <img src="assets/champions/pyke.png" alt="Pyke" class="champion-img">
+                    <img src="assets/champions/PykeSquare.png" alt="Pyke" class="champion-img">
                     <span>Pyke</span>
                   </div>
                 </div>
